# oximod

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md
.github/workflows/: ci.yml
monoxide/: Cargo.toml
monoxide/examples/: basic_usage.rs  by_id.rs  delete.rs  query.rs  update.rs
monoxide/src/: lib.rs
monoxide/tests/: clear.rs  connection.rs  count.rs  delete.rs  delete_by_id.rs  delete_one.rs  exists.rs  find.rs  find_by_id.rs  find_one.rs  macro_tests.rs  save.rs  update.rs  update_by_id.rs  update_one.rs
monoxide_core/: Cargo.toml  README.md
monoxide_core/src/: error.rs  lib.rs
monoxide_core/src/error/: client_error.rs  conn_error.rs  printable.rs
monoxide_core/src/feature/client/: mod.rs
monoxide_core/src/feature/conn/: client.rs  default_db.rs  mod.rs
monoxide_core/src/feature/model/: mod.rs
monoxide_macros/: Cargo.toml  LICENSE  README.md
monoxide_macros/src/: lib.rs
oximod/: Cargo.toml  README.md
oximod/examples/: aggregate_usage.rs  basic_usage.rs  by_id.rs  default_usage.rs  delete.rs  hook_usage.rs  query.rs  update.rs  validate_usage.rs
oximod/src/: lib.rs
oximod/tests/: aggregate.rs  builder_api.rs  clear.rs  common.rs  connection.rs  count.rs  default.rs  delete.rs  delete_by_id.rs  delete_one.rs  exists.rs  find.rs  find_by_id.rs  find_one.rs  get_collection.rs  index.rs  save.rs  update.rs  update_by_id.rs  update_one.rs  validate.rs  validate_email.rs  validate_length.rs  validate_min_and_max.rs  validate_pattern.rs  validate_required_enum.rs
oximod_core/: Cargo.toml  LICENSE  README.md
oximod_core/src/: error.rs  feature.rs  lib.rs
oximod_core/src/error/: conn_error.rs  oximod_error.rs  printable.rs
oximod_core/src/feature/conn/: client.rs
oximod_core/src/feature/model/: mod.rs
oximod_macros/: Cargo.toml  LICENSE  README.md
oximod_macros/src/: default.rs  index.rs  lib.rs  validate.rs
src/: feature.rs  lib.rs
src/error/: client_error.rs  printable.rs
src/feature/client/: mod.rs
tests/: connection.rs
