[package]
name = "monoxide"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.86"
mongodb = "3.2.1"
thiserror = "2.0.11"
monoxide_core = { path = "../monoxide_core" }
monoxide_macros = { path = "../monoxide_macros" }

[dev-dependencies]
dotenv = "0.15.0"
testresult = "0.4.1"
tokio = { version = "1.43.0", features = ["full"] }
