[package]
name = "monoxide_macros"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0.98", features = ["full"] }
quote = "1.0.38"
proc-macro2 = "1.0.93"
mongodb = "3.2.1"
thiserror = "2.0.11"
monoxide_core = { version = "0.1.0", path = "../monoxide_core" }
futures-util = "0.3.31"
