[package]
name = "monoxide_macros"
version = "0.1.0"
edition = "2021"
authors = ["Arshia Eskandari <email@arshiaeskandari.com>"]
description = "Procedural macros for the Monoxide MongoDB ODM."
license = "MIT"
repository = "https://github.com/arshia-eskandari/monoxide"
readme = "README.md"
keywords = ["mongodb", "odm", "macro", "derive", "mongoose"]
categories = ["database", "asynchronous", "development-tools::procedural-macro"]

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0.98", features = ["full"] }
quote = "1.0.38"
proc-macro2 = "1.0.93"
mongodb = "3.2.1"
thiserror = "2.0.11"
monoxide_core = { version = "0.1.0", path = "../monoxide_core" }
futures-util = "0.3.31"
