[package]
name = "oximod"
version = "0.1.4"
edition = "2021"
authors = ["Arshia Eskandari <email@arshiaeskandari.com>"]
description = "MongoDB ODM for Rust inspired by Mongoose"
license = "MIT"
repository = "https://github.com/arshia-eskandari/oximod"
readme = "README.md"
keywords = ["mongodb", "odm", "mongoose", "rust"]
categories = ["database", "asynchronous"]

[dependencies]
async-trait = "0.1.86"
mongodb = "3.2.1"
thiserror = "2.0.11"
oximod_core = { version = "0.1.4", path = "../oximod_core" }
oximod_macros = { version = "0.1.5", path = "../oximod_macros" }
serde = "1.0.219"
futures-util = "0.3.31"

[dev-dependencies]
dotenv = "0.15.0"
testresult = "0.4.1"
tokio = { version = "1.43.0", features = ["full"] }
