[package]
name = "oximod_macros"
version = "0.1.4"
edition = "2021"
authors = ["Arshia Eskandari <email@arshiaeskandari.com>"]
description = "Procedural macros for the OxiMod MongoDB ODM."
license = "MIT"
repository = "https://github.com/arshia-eskandari/oximod"
readme = "README.md"
keywords = ["mongodb", "odm", "macro", "derive", "mongoose"]
categories = ["database", "asynchronous"]

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0.98", features = ["full"] }
quote = "1.0.38"
proc-macro2 = "1.0.93"
mongodb = "3.2.1"
thiserror = "2.0.11"
oximod_core = { version = "0.1.3", path = "../oximod_core" }
futures-util = "0.3.31"
